trunk/Archive2/35/fb1ad1dd2b0e36/output
main.cpp:11:3: error: no type named 'type' in 'std::enable_if<false, bool>'; 'enable_if' cannot be used to disable this declaration
                C == 1,
                ^~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_pair.h:102:11: note: in instantiation of template class 'Test<0>' requested here
      _T2 second;                /// @c second is a copy of the second object
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_tree.h:134:12: note: in instantiation of template class 'std::pair<const int, Test<0> >' requested here
      _Val _M_value_field;
           ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_tree.h:1122:22: note: in instantiation of template class 'std::_Rb_tree_node<std::pair<const int, Test<0> > >' requested here
          _M_erase(_S_right(__x));
                            ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_tree.h:671:9: note: in instantiation of member function 'std::_Rb_tree<int, std::pair<const int, Test<0> >, std::_Select1st<std::pair<const int, Test<0> > >, std::less<int>, std::allocator<std::pair<const int, Test<0> > > >::_M_erase' requested here
      { _M_erase(_M_begin()); }
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_map.h:96:11: note: in instantiation of member function 'std::_Rb_tree<int, std::pair<const int, Test<0> >, std::_Select1st<std::pair<const int, Test<0> > >, std::less<int>, std::allocator<std::pair<const int, Test<0> > > >::~_Rb_tree' requested here
    class map
          ^
1 error generated.
